--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                       <img src="assets/images/michal.jpg">
                       <div class="down-content">
                         <h4>www...</h4>
-                        <p>Personal responsive portfolio created by me in: HTML, CSS, Bootstrap & JavaScript.<p>
+                        <p>Personal responsive portfolio created in: HTML, CSS, Bootstrap & JavaScript.<p>
                         <br>
                       </div>
                     </div>
@@ -155,7 +155,7 @@
                       <img src="assets/images/tata.jpg">
                       <div class="down-content">
                        <h4>www...</h4>
-                        <p>Responsive domain for the company created on request. Website fully made by me in: HTML, CSS, JavaScript, Bootstrap.</p>
+                        <p>Responsive domain for the company created on request. Website fully made in: HTML, CSS, JavaScript, Bootstrap.</p>
                       </div>
                     </div>
                   </div>
