--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">My name is Michał and I'm a <span class="typing-2"></span></div>
-                    <p>I'm 16 years old and I'm a student of the high school in Więcbork. I like to see the results of my hard work. I've been programming for almost 2 years in: HTML, CSS, Bootstrap and JavaScript.
+                    <p>I'm 16 years old and I'm a student of the secondary school in Więcbork. I like to see the results of my hard work. I've been programming for almost 2 years in: HTML, CSS, Bootstrap and JavaScript.
                     <br>
                     I'm an avid hobbyist. Despite programming I like to spend my free time by playing volleyball, piano, computer games, skiing, do karate or attend to ASG.</p>
                 </div>
