--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <img src="assets/images/profile-1.jpeg" alt="Michał Has">
                 </div>
                 <div class="column right">
-                    <div class="text">My name is Michał and I'm a <span class="typing-2"></span></div>
+                    <div class="text">My name is Michał and I'm a <br><span class="typing-2"></span></div>
                     <p>I'm 16 years old and I'm a student of the secondary school in Więcbork. I like to see the results of my hard work. I've been programming for almost 2 years in: HTML, CSS, Bootstrap and JavaScript.
                     <br>
                     I'm an avid hobbyist. Despite programming I like to spend my free time by playing volleyball, piano, computer games, skiing, do karate or attend to ASG.</p>
@@ -123,11 +123,11 @@
                   <container>
                     <i class="icon"></i>
                         <div class="details">
-                            <span class="titles"><span style="color: white">Główna Kwatera ZHP</span></span>
+                            <span class="titles"><span style="color: white">Headquard ZHP</span></span>
                             <span><span style="color: white">10.05.2021</span></span>
                         </div>
                         <br>
-                        <p><span style="color: white">Starting an intership at Główna Kwatera ZHP as a Front-end Developer.</span></p>
+                        <p><span style="color: white">Starting an intership at Headquard ZHP (Polish Scouting & Guiding association) as a Front-end Developer.</span></p>
                   </container>
                 </div>
               </div>
@@ -144,7 +144,7 @@
                     <div class="service-item">
                       <img src="assets/images/michal.jpg">
                       <div class="down-content">
-                        <h4>www...</h4>
+                        <h4>Portfolio</h4>
                         <p>Personal responsive portfolio created in: HTML, CSS, Bootstrap & JavaScript.<p>
                         <br>
                       </div>
@@ -154,7 +154,7 @@
                     <div class="service-item">
                       <img src="assets/images/tata.jpg">
                       <div class="down-content">
-                       <h4>www...</h4>
+                       <h4>Firma CD Więcbork</h4>
                         <p>Responsive domain for the company created on request. Website fully made in: HTML, CSS, JavaScript, Bootstrap.</p>
                       </div>
                     </div>
