--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <!-- experiences section start -->
         <section class="experiences" id="experiences">
         <div class="max-width">
-            <h2 class="title">Experiences</h2>
+            <h2 class="title">Experience</h2>
                 <div class="wrapper">
                     <div class="center-line">
                          <a href="#experiences" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
@@ -123,11 +123,11 @@
                   <container>
                     <i class="icon"></i>
                         <div class="details">
-                            <span class="titles"><span style="color: white">Headquard ZHP</span></span>
+                            <span class="titles"><span style="color: white">Headquards ZHP</span></span>
                             <span><span style="color: white">10.05.2021</span></span>
                         </div>
                         <br>
-                        <p><span style="color: white">Starting an intership at Headquard ZHP (Polish Scouting & Guiding association) as a Front-end Developer.</span></p>
+                        <p><span style="color: white">Starting an intership at Headquards ZHP (Polish Scouting & Guiding association) as a Front-end Developer.</span></p>
                   </container>
                 </div>
               </div>
