--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="service-item">
                       <img src="assets/images/michal.jpg">
                       <div class="down-content">
-                        <h4>Portfolio</h4>
+                          <h4><a href="https://xhasekx.github.io/michal-portfolio/">Portfolio</a></h4>
                         <p>Personal responsive portfolio created in: HTML, CSS, Bootstrap & JavaScript.<p>
                         <br>
                       </div>
@@ -154,7 +154,7 @@
                     <div class="service-item">
                       <img src="assets/images/tata.jpg">
                       <div class="down-content">
-                       <h4>Firma CD Więcbork</h4>
+                          <h4><a href="https://xhasekx.github.io/tata-domena/">Firma CD</a></h4>
                         <p>Responsive domain for the company created on request. Website fully made in: HTML, CSS, JavaScript, Bootstrap.</p>
                       </div>
                     </div>
