--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                       <img src="assets/images/tata.jpg">
                       <div class="down-content">
                           <h4><a href="https://xhasekx.github.io/firmacd/">Firma CD</a></h4>
-                        <p>Responsive domain for the company created on request. Website fully made in: HTML, CSS, JavaScript, Bootstrap.</p>
+                        <p>Responsive domain for the company created on request. Website fully made in: HTML, CSS, JavaScript, Bootstrap & jQuery.</p>
                       </div>
                     </div>
                   </div>
